--- a/static/main.css
+++ b/static/main.css
@@ -28,13 +28,30 @@ html,body{
     position: relative
 
 }
+#vmimg2{
+    position: absolute;
+    width: 107px;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    z-index: 33;
+    display: none;
+}
+#image2{
+    border-radius: 20px;
+    width: 100%;
+    height: 200px;
+    position: relative
+
+}
 .img_wrapper{
+
     display:flex;
     flex-direction: column;
     position: relative;
     /*border: 1px dotted black;*/
     border-radius: 4px;
-    width: auto;
+    width: 200px;
     height: 200px;
     overflow: hidden;
 }
@@ -47,6 +64,16 @@ html,body{
     transform: translate(-50%, -50%);
     z-index: 100;
 }
+#img_label2{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    color: #33a604;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+}
+
 .no-border{
     border: none !important;
     outline: none !important;
