--- a/static/main.css
+++ b/static/main.css
@@ -41,15 +41,12 @@ html,body{
     border-radius: 20px;
     width: 100%;
     height: 200px;
-    position: relative
-
+    position: relative;
 }
 .img_wrapper{
-
     display:flex;
     flex-direction: column;
     position: relative;
-    /*border: 1px dotted black;*/
     border-radius: 4px;
     width: 200px;
     height: 200px;
