changes on ui reduced spaces to be compact

--- a/static/main.css
+++ b/static/main.css
@@ -4,7 +4,7 @@ html,body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto Condensed', sans-serif;
-    background-color: #c6dcfd;
+    background-color: #c1c1c1;
 }
 .bg-whitee{
     background-color: #ffffff;
