--- a/static/main.css
+++ b/static/main.css
@@ -113,13 +113,22 @@ textarea:focus, input:focus{
     color: black;
 }
 .input_title_sm::placeholder{
-    font-size: 19px;
+    font-size: 17px;
     color: black;
 }
 .input_title_sm{
     font-size: 17px;
     color: black;
 }
+.input_title_smn::placeholder{
+    font-size: 14px;
+    color: black;
+}
+.input_title_smn{
+    font-size: 14px;
+    color: black;
+}
+
 .input_title_sm2::placeholder{
     font-size: 15px;
     color: black;
