--- a/static/main.css
+++ b/static/main.css
@@ -1,12 +1,20 @@
 @import url('fontaw.css');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed&display=swap');
 html,body{
     box-sizing: content-box;
     margin: 0;
     padding: 0;
-    /*font-family:  sans-serif;*/
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: lighter;
+    /*font-family: 'Open Sans Condensed', sans-serif;*/
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
+    /*font-family: 'Roboto Condensed', sans-serif;*/
+    /*font-weight: bold;*/
     background-color: #ffffff;
+    color: #000000;
+    letter-spacing: 1px;
+}
+input,textarea,select{
+    letter-spacing: 1px;
 }
 .bg-whitee{
     background-color: #ffffff;
@@ -154,7 +162,18 @@ textarea:focus, input:focus{
 }
 
 
-.header_bottom_boder{
+/*.header_bottom_boder{*/
+/*    border-bottom: 2px solid #575757;*/
+
+/*}*/
+.header_bottom_boder:after {
+    content: ""; /* This is necessary for the pseudo element to work. */
+    display: block; /* This will put the pseudo element on its own line. */
+    margin: 0 auto; /* This will center the border. */
+    width: 98%; /* Change this to whatever width you want. */
+    padding-top: 20px; /* This creates some space between the element and the border. */
+    /*border-bottom: 1px solid black; !* This creates the border. Replace black with whatever color you want. *!*/
+
     border-bottom: 2px solid #575757;
 
 }
