--- a/static/main.css
+++ b/static/main.css
@@ -159,6 +159,7 @@ textarea:focus, input:focus{
 
 .text-bold-placehoder, .text-bold-placehoder::placeholder{
     font-weight: bold;
+    font-size: 16px;
 }
 
 
