--- a/static/main.css
+++ b/static/main.css
@@ -1,14 +1,16 @@
 @import url('fontaw.css');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');*/
 html,body{
     box-sizing: content-box;
     margin: 0;
     padding: 0;
-    /*font-family: 'Open Sans Condensed', sans-serif;*/
-    font-family: 'Fira Sans Extra Condensed', sans-serif;
+    font-family: 'Open Sans Condensed', sans-serif;
+    /*font-family: 'Fira Sans Extra Condensed', sans-serif;*/
     /*font-family: 'Roboto Condensed', sans-serif;*/
-    /*font-weight: bold;*/
+    font-weight:400;
     background-color: #ffffff;
     color: #000000;
     letter-spacing: 1px;
@@ -16,6 +18,7 @@ html,body{
 input,textarea,select{
     letter-spacing: 1px;
 }
+
 .bg-whitee{
     background-color: #ffffff;
 }
